--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
-				<a href="https://2217937757.github.io/GIT/12312/其他作业/" target="_blank">其他作业</a>
-				<a href="https://2217937757.github.io/GIT/桃饱/" target="_blank">桃饱网</a>
+				<a href="https://2217937757/github/io/GIT/12312/其他作业/" target="_blank">其他作业</a>
+				<a href="https://2217937757/github/io/GIT/桃饱/" target="_blank">桃饱网</a>
 			</div>
 		<hr/ size="3" color="#000000" align="center" width="800">	
 		<div class="q4">
@@ -84,7 +84,7 @@
 		<hr/ size="3" color="#000000" align="center" width="800">
 			
 		<div class="q5">
-			<p><a href="http://https://2217937757.github.io/GIT/" target="_blank">原地tp</a></p>
+			<p><a href="http://https://2217937757/github/io/GIT/" target="_blank">原地tp</a></p>
 		</div>
 		
 		<hr/ size="3" color="#000000" align="center" width="800">
