--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<hr/ size="3" color="#000000" align="center" width="800">
 			
 		<div class="q5">
-			<p><a href="http://https://2217937757/github/io/GIT/" target="_blank">原地tp</a></p>
+			<p><a href="http://https://2217937757.github.io.GIT/" target="_blank">原地tp</a></p>
 		</div>
 		
 		<hr/ size="3" color="#000000" align="center" width="800">
