--- a/123123/其他作业/index.html
+++ b/123123/其他作业/index.html
@@ -49,10 +49,10 @@
 	<body>
 		<div class="qq">
 			<div class="q1">
-				<a href="https://2217937757.github.io/XIAO/123123/html作业/" target="_blank">HTML作业</a>
+				<a href="https://2217937757.github.io/XIAO/123123/html作业/" target="_blank">大一下学期HTML作业</a>
 			</div>
 			<div class="q2">
-				<a href="https://2217937757.github.io/XIAO/123123/canvas/" target="_blank">canvas游戏动画作业</a>
+				<a href="https://2217937757.github.io/XIAO/123123/canvas/" target="_blank">大一下学期canvas游戏动画作业</a>
 			</div>
 		</div>
 	<div class="aa">
