--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
-				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a>
+<!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
 				<a href="https://2217937757.github.io/XIAO/桃饱/" target="_blank">桃饱网</a>
 			</div>
 		<hr/ size="3" color="#000000" align="center" width="800">	
