--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
 <!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
+				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选题</a>
 				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选人</a>
 				<a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
 			</div>
