--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
 <!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
-				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选 题</a>
-				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选 人</a>
+<!-- 				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选 题</a> -->
+<!-- 				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选 人</a> -->
 				<a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
 				<a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打钱</a>
 			</div>
