--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 				<a href="https://convertio.co/zh/jfif-plt/" target="_blank">在线图片转换</a>&nbsp;
 				<a href="https://www.4399.com/" target="_blank">4399小游戏</a>&nbsp;
 				<a href="https://www.taobao.com/" target="_blank">淘宝网</a>&nbsp;
+				<a href="https://2217937757.github.io/XIAO/123123/上课游戏动画设计/05.28上课/week15_作业/【研究】空战1941游戏/" target="_blank">打 飞 机</a>
 			</p>
 		</div>
 		
