--- a/123123/无限弹窗/index.html
+++ b/123123/无限弹窗/index.html
@@ -9,10 +9,11 @@
     <script>
             var aa = prompt("请输入密码");
             
-            while(isNaN(aa)){
+            while(true){
                 alert("密码错误，请重新输入");
                 prompt("请输入密码");
             }
+
     </script>
 </body>
 </html>
