--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<a href="http://www.baidu.com/" target="_blank">百度一下，你就知道</a>&nbsp;
 				<a href="https://www.bilibili.com/" target="_blank">bilibili弹幕网</a>&nbsp;
 				<a href="http://oeasy.org/" target="_blank">oeasy，会玩才会学</a>&nbsp;<br/>
-				<a href="https://account.aliyun.com/" target="_blank">云服务器管理平台</a>&nbsp;
+<!-- 				<a href="https://account.aliyun.com/" target="_blank">云服务器管理平台</a>&nbsp; -->
 				<a href="https://convertio.co/zh/jfif-plt/" target="_blank">在线图片转换</a>&nbsp;
 				<a href="https://www.4399.com/" target="_blank">4399小游戏</a>&nbsp;
 				<a href="https://www.taobao.com/" target="_blank">淘宝网</a>&nbsp;
