--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>御 坂 美 琴</title>
+		<link rel="icon" href="https://2217937757.github.io/XIAO/img/1.jpg"/>
 		<style type="text/css">
 			.body{
 				margin: 0;
