--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div> -->
 		
 		<div class="q0" align="center">
-			<img src="href="img/背景1.jpg" width="800">
+			<img src="href="https://2217937757.github.io/XIAO/img/背景1.jpg" width="800">
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
@@ -98,7 +98,7 @@
 			<p style="text-align: right; padding-right: 150px; line-height: 25px; color: #f27b44;">最后编辑于2020年05月07日下午<br>当前版本1.50</p>
 		<div class="music" align="center">
 			<p>当前播放<br>only my rilgun</p>
-		<audio src="href="img/only my rilgun.mp3" controls="controls">
+		<audio src="href="https://2217937757.github.io/XIAO/img/only my rilgun.mp3" controls="controls">
 			当前浏览器不支持audio
 		</audio>
 		</div>
