--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> 御 坂 美 琴 </title>
-		<link rel="icon" href="https://2217937757.github.io/XIAO/img/婚后光子.png"/>
+		<link rel="icon" href="/img/婚后光子.png"/>
 		<style type="text/css">
 			.body{
 				margin: 0;
@@ -98,7 +98,7 @@
 			<p style="text-align: right; padding-right: 150px; line-height: 25px; color: #f27b44;">最后编辑于2020年05月07日下午<br>当前版本1.50</p>
 		<div class="music" align="center">
 			<p>当前播放<br>only my rilgun</p>
-		<audio src="href="https://2217937757.github.io/XIAO/img/only my rilgun.mp3" controls="controls">
+		<audio src="href="/img/only my rilgun.mp3" controls="controls">
 			当前浏览器不支持audio
 		</audio>
 		</div>
