--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div> -->
 		
 		<div class="q0" align="center">
-			<img src="href="https://2217937757.github.io/XIAO/img/背景1.jpg" width="800">
+			<img src="img/背景1.jpg" width="800">
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
