--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<p style="text-align: right; padding-right: 150px; line-height: 25px; color: #f27b44;">最后编辑于2020年05月07日下午<br>当前版本1.50</p>
 		<div class="music" align="center">
 			<p>当前播放<br>only my rilgun</p>
-		<audio src="href="img/only my rilgun.mp3" controls="controls">
+		<audio src="img/only my rilgun.mp3" controls="controls">
 			当前浏览器不支持audio
 		</audio>
 		</div>
