--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			}
 			.music{
 				border: #000000 0px solid;
-				position: relative;
-				left: 0;
-				top: -600px;
+				position: absolute;
+				left: 42%;
+				top: 30%;
 				opacity: 0.7;
 				color: #dd703e;
 				font-size: 20px;
