--- a/123123/图片切换/index.html
+++ b/123123/图片切换/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>图 片 切 换</title>
 
     <!-- 链接jq文件 -->
     <script src="https://2217937757.github.io/XIAO/js/jq.min.js"></script>
