--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> 御 坂 美 琴 </title>
-		<link rel="icon" href="/img/婚后光子.png"/>
+		<link rel="icon" href="img/婚后光子.png"/>
 		<style type="text/css">
 			.body{
 				margin: 0;
