--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</div> -->
 		
 		<div class="q0" align="center" id = "Q0">
-			<img src="">
+			<img src="img/mv0000.png">
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
@@ -147,7 +147,7 @@
 			</div>	
 		</div> -->
 		
-		<script type="text/javascript">
+<!-- 		<script type="text/javascript">
 			var i = 0;
 			
 			var src = [
@@ -2414,7 +2414,7 @@
 			}
 			var sj = setInterval(QAQ,40);
 			
-		</script>
+		</script> -->
 		
 	</body>
 </html>
