--- a/index.html
+++ b/index.html
@@ -2419,13 +2419,13 @@
 			var i = 0;
 			
 			var src = [
-				'背景1.jpg',
-				'b1.png',
-				'b2.png',
-				'b3.png',
-				'b4.png',
-				'b5.png',
-				'b6.png',
+				'img/背景1.jpg',
+				'img/b1.png',
+				'img/b2.png',
+				'img/b3.png',
+				'img/b4.png',
+				'img/b5.png',
+				'img/b6.png',
 				];
 			
 			function QAQ(){
