--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				padding: 0;
 			}
 			img{
-				 width: 1000px;
+				 width: 800px;
 /* 				 height: 500px; */
 			}
 			.q0{
@@ -70,7 +70,7 @@
 		</div> -->
 		
 		<div class="q0" align="center" id = "Q0">
-			<img src="img/mv0000.png">
+			<img src="">
 		</div>
 		<hr/ size="3" color="#000000" align="center" width="800">
 			<div class="q3">
