--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title> 御 坂 美 琴 </title>
+		<title> BI LI BI LI </title>
 		<link rel="icon" href="img/婚后光子.png"/>
 		<script src="https://2217937757.github.io/XIAO/js/jq.min.js"></script>
 		<style type="text/css">
