--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		
 
 		<script type="text/javascript">
-			$(function(){
+			$(document).ready(function (){
 				var i = 0;
 
 				var src = [
@@ -173,7 +173,7 @@
 					$('#Q0 img').attr('src',src[i])
 				}
 				var sj = setInterval(QAQ,2000);
-			})
+			});
 		</script>
 	</body>
 </html>
