--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title> BI LI BI LI </title>
 		<link rel="icon" href="img/婚后光子.png"/>
 		<script src="https://2217937757.github.io/XIAO/js/jq.min.js"></script>
+		<script src="https://2217937757.github.io/XIAO/js/舍弃.js"></script>
 		<style type="text/css">
 			
 			.body{
@@ -148,7 +149,7 @@
 		</div> -->
 		
 
-		<script type="text/javascript">
+<!-- 		<script type="text/javascript">
 			$(document).ready(function (){
 				var i = 0;
 
@@ -174,6 +175,6 @@
 				}
 				var sj = setInterval(QAQ,40);
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
