--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		</div> -->
 		
 
-<!-- 		<script type="text/javascript">
+	 <script type="text/javascript">
 			$(document).ready(function (){
 				var i = 0;
 
@@ -175,6 +175,6 @@
 				}
 				var sj = setInterval(QAQ,40);
 			});
-		</script> -->
+		</script>
 	</body>
 </html>
