--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
 				<a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打 钱</a>
 				<a href="https://2217937757.github.io/XIAO/123123/无限弹窗/" target="_blank">无限弹窗</a>
-				<a href="https://2217937757.github.io/XIAO/123123/jq品优购/jq品优购/" target="_blank">无限弹窗</a>
+				<a href="https://2217937757.github.io/XIAO/123123/jq品优购/jq品优购/" target="_blank">品优购购物车</a>
 			</div>
 		<hr/ size="3" color="#000000" align="center" width="800">	
 		<div class="q4">
