--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -18,24 +18,24 @@
             1.1版本：
         </h3>
         <p id="suojin">
-            修复单击[剪刀]、[石头]、[布]按钮出结果后，玩家可再次点击按钮修改结果。
+            更新时间：2021年4月5日
         </p>
         <p id="suojin">
-            2021年4月5日
+            修复单击[剪刀]、[石头]、[布]按钮出结果后，玩家可再次点击按钮修改结果。
         </p>
     </div>
     <div>
         <h3>
             1.0版本：
-        </h3> 
+        </h3>
+        <p id="suojin">
+            更新时间：2021年3月25日
+        </p>
         <p id="suojin">
             剪刀石头布人机对战,玩家单击[剪刀]、[石头]、[布]按钮，人机做出对应。
         </p>
         <p id="suojin">
             规则：剪刀>布>石头>剪刀。
-        </p>
-        <p id="suojin">
-            2021年3月25日
         </p>
     </div>
     <div>
