--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -23,6 +23,9 @@
         <p id="suojin">
             修复单击[剪刀]、[石头]、[布]按钮出结果后，玩家可再次点击按钮修改结果。
         </p>
+        <p id="suojin">
+            优化部分代码。
+        </p>
     </div>
     <div>
         <h3>
