--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -20,8 +20,8 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa;     
-            background: #00ffaa;
-            background-image: #00ffaa;
+            /*background: #00ffaa;*/
+            /*background-image: #00ffaa;*/
             text-align: center;
             font-size: 30px;
         }
@@ -29,8 +29,8 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa; 
-            background: #0044ff;
-            background-image: #0044ff;
+            /*background: #0044ff;*/
+            /*background-image: #0044ff;*/
             position: relative;
             top: -310px;
             left: 310px;
