--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -20,17 +20,17 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa;     
-            /*background: #00ffaa;*/
-            /*background-image: #00ffaa;*/
+            background: #ffffff;
+            background-image: #ffffff;
             text-align: center;
             font-size: 30px;
         }
         #diannao{
             width: 300px;
             height: 300px;
-            border: 5px solid #aaa; 
-            /*background: #0044ff;*/
-            /*background-image: #0044ff;*/
+            border: 5px solid #aaa;     
+            background: #ffffff;
+            background-image: #ffffff;
             position: relative;
             top: -310px;
             left: 310px;
