--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -15,6 +15,17 @@
     <a href="index.html">返回游戏</a>
     <div>
         <h3 class="biaoti">
+            1.2版本：
+        </h3>
+        <p id="suojin">
+            更新时间：2021年4月7日
+        </p>
+        <p id="suojin">
+            修复可在开发者工具中提前知道电脑出招。
+        </p>
+    </div>
+    <div>
+        <h3 class="biaoti">
             1.1版本：
         </h3>
         <p id="suojin">
@@ -22,9 +33,6 @@
         </p>
         <p id="suojin">
             修复单击[剪刀]、[石头]、[布]按钮出结果后，玩家可再次点击按钮修改结果。
-        </p>
-        <p id="suojin">
-            优化部分代码。
         </p>
     </div>
     <div>
@@ -35,7 +43,7 @@
             更新时间：2021年3月25日
         </p>
         <p id="suojin">
-            剪刀石头布人机对战,玩家单击[剪刀]、[石头]、[布]按钮，人机做出对应。
+            剪刀石头布人机对战,玩家单击[剪刀]、[石头]、[布]按钮，电脑做出对应。
         </p>
         <p id="suojin">
             规则：剪刀>布>石头>剪刀。
