--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -20,17 +20,17 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa;     
-            background: #ffffff;
-            background-image: #ffffff;
+            background: #00ffaa;
+            background-image: #00ffaa;
             text-align: center;
             font-size: 30px;
         }
         #diannao{
             width: 300px;
             height: 300px;
-            border: 5px solid #aaa;     
-            background: #ffffff;
-            background-image: #ffffff;
+            border: 5px solid #aaa; 
+            background: #0044ff;
+            background-image: #0044ff;
             position: relative;
             top: -310px;
             left: 310px;
@@ -79,7 +79,7 @@
             
         </div>
         <div style="text-align: right;">
-            <span>版本号2.0<br>
+            <span>版本号1.2<br>
                 <a href="gengxin.html">更新内容</a>
             </span>
         </div>
@@ -88,7 +88,6 @@
 </html>
 
 <script>
-    var sum = 3*Math.random()
     var cxks = "<br><input type='button' value='重新开始' onclick='suaxin()'>"
     function jiandao(){
         document.getElementById("wanjia").innerHTML = "<img src='img/jiandao.jpg'>你的出招"
@@ -128,6 +127,7 @@
     }
 
     function diannaochuzhao(){
+        var sum = 3*Math.random()
         if(sum<1){
             document.getElementById("diannao").innerHTML = "<img src='img/jiandao.jpg'>电脑出招"
             return "jiandao"
