--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -20,7 +20,7 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa;     
-            background: #000;
+            background: #fff;
             text-align: center;
             font-size: 30px;
         }
@@ -28,7 +28,7 @@
             width: 300px;
             height: 300px;
             border: 5px solid #aaa; 
-            background: #000;
+            background: #fff;
             position: relative;
             top: -310px;
             left: 310px;
