--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -15,6 +15,20 @@
     <a href="index.html">返回游戏</a>
     <div>
         <h3 class="biaoti">
+            1.3版本：
+        </h3>
+        <p id="suojin">
+            更新时间：2021年4月15日
+        </p>
+        <p id="suojin">
+            jquery代码替换javascript代码。
+        </p>
+        <p id="suojin">
+            分离js、css文件。
+        </p>
+    </div>
+    <div>
+        <h3 class="biaoti">
             1.2版本：
         </h3>
         <p id="suojin">
