--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 		
 		<hr/ size="3" color="#000000" align="center" width="800">
-			<p style="text-align: right; padding-right: 150px; line-height: 25px; color: #f27b44;">最后编辑于2020年11月09日下午<br>当前版本2.0.1</p>
+			<p style="text-align: right; padding-right: 150px; line-height: 25px; color: #f27b44;">网页处于初期阶段<br>最后编辑于2021年03月09日下午<br>当前版本2.0.1</p>
 		<div class="music" align="center">
 			<p>当前播放<br>only my rilgun</p>
 		<audio src="img/only my rilgun.mp3" controls="controls" autoplay="autoplay">
