--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             display: inline-block;
             border: 2px solid #ccc;
             border-radius: 14px;
-            padding: 5px;
-            width: 768px;
+	    padding: 5px;
+  /*        width: 768px; */
         }
         header{
             padding: 30px;
