--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #000;
+            /* background-color: #000; */
             color: #fff;
         }
         #zuiwai{
             display: inline-block;
             border: 2px solid #ccc;
             border-radius: 14px;
-	    padding: 5px;
-  /*        width: 768px; */
+            padding: 5px;
         }
         header{
             padding: 30px;
@@ -40,9 +39,36 @@
             padding: 0 auto;
             display: inline-block;
         }
+
+        video{  
+            position: fixed;  
+            right: 0px;  
+            bottom: 0px;  
+            min-width: 100%;  
+            min-height: 100%;  
+            height: auto;  
+            width: auto;
+            /*加滤镜*/
+            /*filter: blur(15px); //背景模糊设置 */
+            /*-webkit-filter: grayscale(100%);*/  
+            /*filter:grayscale(100%); //背景灰度设置*/  
+            z-index:-11
+        }  
+        source{  
+            min-width: 100%;  
+            min-height: 100%;  
+            height: auto;  
+            width: auto;  
+        } 
+
     </style>
 </head>
 <body id="test">
+        <!-- 背景 -->
+        <video autoplay loop muted>
+            <source src="./img/dian.mp4" type="video/mp4"/>
+        </video>
+        <!-- 背景结束 -->
     <header>
         <p id="yt1">
             <a href="#">XIAO GANG</a>
@@ -192,6 +218,10 @@
             </p>
         </div>
     </div>
+
+
+
+      
 </body>
 </html>
 
