--- a/index.html
+++ b/index.html
@@ -179,14 +179,22 @@
             <!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
             <!-- 				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选 题</a> -->
             <!-- 				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选 人</a> -->
-                            <a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
-                            <a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打 钱</a>
-                            <a href="https://2217937757.github.io/XIAO/123123/无限弹窗/" target="_blank">无限弹窗</a>
+                <a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
+                <a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打 钱</a>
+                <a href="https://2217937757.github.io/XIAO/123123/无限弹窗/" target="_blank">无限弹窗</a>
+        </div>
+        <div id="box"> <p style="text-align: center; font-size: 30px;">
+            原地传送
+        </p>
+        <p style="height: 20px;"></p>
+        <p>
+            <a href="https://2217937757.github.io/XIAO/" target="_blank">原地tp</a>
+        </p>
+		<p>
+            <a href="https://2217937757.github.io/XIAO/123123/剪刀石头布/" target="_blank">剪刀石头布</a>
+        </p>
         </div>
         <!-- <div id="box">
-            5
-        </div>
-        <div id="box">
             6
         </div>
         <div id="box">
