--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 
 <!-- 鼠标点击效果 -->
 <script type="text/javascript">
+	alert('手机使用浏览器打开')
     $(function(){
       var height=$(window).width();
         $('#test').css({
