--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            /* background-color: #000; */
+            background-color: #000;
             color: #fff;
         }
         #zuiwai{
