--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
     </style>
 </head>
 <body id="test">
-<!--         <!-- 背景 -->
+        <!-- 背景 -->
+	<!-- 
         <video autoplay loop muted>
             <source src="./img/dian.mp4" type="video/mp4"/>
         </video>
-        <!-- 背景结束 --> -->
+	 -->
+        <!-- 背景结束 -->
     <header>
         <p id="yt1">
             <a href="#">XIAO GANG</a>
