--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -13,6 +13,22 @@
 </head>
 <body>
     <a href="index.html">返回游戏</a>
+    <!-- 1.4 -->
+    <div>
+        <h3 class="biaoti">
+            1.4版本：
+        </h3>
+        <p id="suojin">
+            更新时间：2021年5月13日
+        </p>
+        <p id="suojin">
+            替换css文件、优化代码写法。
+        </p>
+        <p id="suojin">
+            手机适配失效。
+        </p>
+    </div>
+    <!-- 1.3 -->
     <div>
         <h3 class="biaoti">
             1.3版本：
@@ -27,6 +43,7 @@
             分离js、css文件。
         </p>
     </div>
+    <!-- 1.2 -->
     <div>
         <h3 class="biaoti">
             1.2版本：
@@ -38,6 +55,7 @@
             修复可在开发者工具中提前知道电脑出招。
         </p>
     </div>
+    <!-- 1.1 -->
     <div>
         <h3 class="biaoti">
             1.1版本：
@@ -49,6 +67,7 @@
             修复单击[剪刀]、[石头]、[布]按钮出结果后，玩家可再次点击按钮修改结果。
         </p>
     </div>
+    <!-- 1.0 -->
     <div>
         <h3>
             1.0版本：
