--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>剪刀石头布</title>
-    <!--js代码 <script src="js/index.js"></script> -->
+    <!--版本更新失效js代码 <script src="js/index.js"></script> -->
     <link rel="stylesheet" href="css/index.css">
     <script src="https://2217937757.github.io/XIAO/js/jq.min.js"></script>
     <script src="js/jqery.js"></script>
@@ -13,21 +13,30 @@
 <body>
     <div class="waiquan">
         <div id="wanjia">
-            <img src="img/caiquan.gif" alt="">
-            你的出招
+           <div id="wanjiaimg">
+                <img src="img/caiquan.gif" alt="">
+           </div>
+            <div>
+                你的出招
+            </div>
         </div>
         <div id="diannao">
-            <img src="img/caiquan.gif" alt="">
-            电脑出招
+            <div id="diannaoimg">
+                <img src="img/caiquan.gif" alt="">
+            </div>
+            <div>
+                电脑出招
+            </div>
         </div>
-
+    </div>
         <div class="xuanze" id="anniu">
             你的选择：
             <input type="button" id="jiandao" value="剪刀" >
             <input type="button" id="shitou" value="石头" >
             <input type="button" id="bu" value="布" >
         </div>
-        <!-- js代码
+        <!-- js 设置点击事件
+            版本更新失效
         <div class="xuanze" id="anniu">
             你的选择：
             <input type="button" id="jiandao" value="剪刀" onclick="jiandao()">
@@ -35,15 +44,14 @@
             <input type="button" id="bu" value="布" onclick="bu()">
         </div> -->
         <div id="jieguo">
-            <span id="span"></span>
-            <br>
+            <p id="span"></p>
             <input type='button' value='重新开始' id='xx'>
         </div>
-        <div style="text-align: right;">
-            <span>版本号1.3<br>
-                <a href="gengxin.html">更新内容</a>
-            </span>
-        </div>
+    
+    <div style="text-align: right; padding-right: 10%;">
+        <span>版本号1.4<br>
+            <a href="gengxin.html">更新内容</a>
+        </span>
     </div>
 </body>
 </html>
