--- a/123123/剪刀石头布/index.html
+++ b/123123/剪刀石头布/index.html
@@ -30,7 +30,9 @@
         </div>
     </div>
         <div class="xuanze" id="anniu">
-            你的选择：
+            <p>
+                ↓ 你的选择 ↓
+            </p>
             <input type="button" id="jiandao" value="剪刀" >
             <input type="button" id="shitou" value="石头" >
             <input type="button" id="bu" value="布" >
