--- a/123123/剪刀石头布/gengxin.html
+++ b/123123/剪刀石头布/gengxin.html
@@ -25,7 +25,7 @@
             替换css文件、优化代码写法。
         </p>
         <p id="suojin">
-            手机适配失效。
+            弹性布局适应各类设备。
         </p>
     </div>
     <!-- 1.3 -->
@@ -93,6 +93,7 @@
             微信：18986456896
         </p>
     </div>
+    <a href="index.html">返回游戏</a>
 
 </body>
 </html>
