--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             border-radius: 14px;
             padding: 5px;
             /* justify-content: center; */
+            /* display: flex;
+            justify-content: center; */
         }
         header{
             padding: 30px;
@@ -39,7 +41,8 @@
             border: 1px solid #ccc;
             border-radius: 14px;
             padding: 5px;
-            float: left;
+            display: flex;
+            justify-content: center;
         }
         #wai2{
             padding: 0 auto;
@@ -143,61 +146,117 @@
             </table>
         </div>
         <div id="box">
-            <p style="text-align: center; font-size: 30px;">
-                猫-视频
-            </p>
-            <p style="height: 20px;"></p>
-                <a href="https://static.videezy.com/system/resources/previews/000/045/693/original/22.mp4" target="_blank">小橘猫伸懒腰</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/049/560/original/383A0423-20200510_Shutter_Cat.mp4" target="_blank">苏格兰小猫</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/052/599/original/57.mp4" target="_blank">看镜头的猫</a>
-                <br>
-                <a href="https://static.videezy.com/system/resources/previews/000/050/465/original/159.mp4" target="_blank">木地板上的盒子里的白猫</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/048/643/original/Cute_Cat_Sleeping.mp4" target="_blank">摸鱼睡觉猫</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/052/392/original/54.mp4" target="_blank">眯眯眼</a>
-                <br>
-                <a href="https://static.videezy.com/system/resources/previews/000/049/468/original/C0021_sarman_sm_p1_str_hdr_brt10_sk15.mp4" target="_blank">舔爪子</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/045/691/original/1.mp4" target="_blank">我很委屈</a>
-                <a href="https://static.videezy.com/system/resources/previews/000/046/091/original/feed_kitty_8.mp4" target="_blank">吃奶了</a>
-                <p style="height: 20px;"></p>
-                <p style="text-align: center; font-size: 30px;">
-                    <a href="https://www.videezy.com/free-video/cat">更多</a>
-                </p>
+            <table>
+                <tr>
+                    <td colspan="2" style="text-align: center;">
+                        <p style="text-align: center; font-size: 30px;">
+                            猫-视频
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/045/693/original/22.mp4" target="_blank">小橘猫伸懒腰</a>
+                    </td>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/052/392/original/54.mp4" target="_blank">眯眯眼</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/049/560/original/383A0423-20200510_Shutter_Cat.mp4" target="_blank">苏格兰小猫</a>
+                    </td>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/049/468/original/C0021_sarman_sm_p1_str_hdr_brt10_sk15.mp4" target="_blank">舔爪子</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/052/599/original/57.mp4" target="_blank">看镜头的猫</a>
+                    </td>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/045/691/original/1.mp4" target="_blank">我很委屈</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://static.videezy.com/system/resources/previews/000/050/465/original/159.mp4" target="_blank">木地板上的盒子里的白猫</a>
+                    </td>
+                    <td>                
+                        <a href="https://static.videezy.com/system/resources/previews/000/046/091/original/feed_kitty_8.mp4" target="_blank">吃奶了</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <p style="text-align: center; font-size: 30px;">
+                            <a href="https://www.videezy.com/free-video/cat">更多</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
         </div>
         <div id="box">
-            <p style="text-align: center; font-size: 30px;">
-                其他链接
-            </p>
-            <p style="height: 20px;"></p>
-				<a href="http://www.baidu.com/" target="_blank">百度一下，你就知道</a>&nbsp;
-				<a href="https://www.bilibili.com/" target="_blank">bilibili弹幕网</a>&nbsp;
-				<a href="http://oeasy.org/" target="_blank">oeasy，会玩才会学</a>&nbsp;<br/>
-				<a href="https://convertio.co/zh/jfif-plt/" target="_blank">在线图片转换</a>&nbsp;
-				<a href="https://www.4399.com/" target="_blank">4399小游戏</a>&nbsp;
-				<a href="https://www.taobao.com/" target="_blank">淘宝网</a>&nbsp;
-				<a href="https://2217937757.github.io/XIAO/123123/上课游戏动画设计/05.28上课/week15_作业/【研究】空战1941游戏/" target="_blank">打 飞 机</a>
-				<a href="https://http://www.eduiit.cn/web/" target="_blank">工信教育</a>&nbsp;
+            <table>
+                <tr>
+                    <p style="text-align: center; font-size: 30px;">
+                        其他 
+                        <br>
+                        链接
+                    </p>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="http://www.baidu.com/" target="_blank">百度一下，你就知道</a>&nbsp;
+                        <a href="https://www.bilibili.com/" target="_blank">bilibili弹幕网</a>&nbsp;
+                        <a href="http://oeasy.org/" target="_blank">oeasy，会玩才会学</a>&nbsp;<br/>
+                        <a href="https://convertio.co/zh/jfif-plt/" target="_blank">在线图片转换</a>&nbsp;
+                        <a href="https://www.4399.com/" target="_blank">4399小游戏</a>&nbsp;
+                        <a href="https://www.taobao.com/" target="_blank">淘宝网</a>&nbsp;
+                        <a href="https://2217937757.github.io/XIAO/123123/上课游戏动画设计/05.28上课/week15_作业/【研究】空战1941游戏/" target="_blank">打 飞 机</a>
+                        <a href="https://http://www.eduiit.cn/web/" target="_blank">工信教育</a>&nbsp;
+                    </td>
+                </tr>
+            </table>
         </div>
         <div id="box">
-            <p style="text-align: center; font-size: 30px;">
-                写着玩
-            </p>
-            <p style="height: 20px;"></p>
-            <!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
-            <!-- 				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选 题</a> -->
-            <!-- 				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选 人</a> -->
-                <a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
-                <a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打 钱</a>
-                <a href="https://2217937757.github.io/XIAO/123123/剪刀石头布/" target="_blank">剪刀石头布</a>
-                <a href="https://2217937757.github.io/XIAO/123123/无限弹窗/" target="_blank">无限弹窗</a>
+            <table>
+                <tr>
+                    <td>
+                        <p style="text-align: center; font-size: 30px;">
+                            写着玩
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <!-- 				<a href="https://2217937757.github.io/XIAO/123123/其他作业/" target="_blank">其他作业</a> -->
+                        <!-- 				<a href="https://2217937757.github.io/XIAO/123123/随机选题/" target="_blank">选 题</a> -->
+                        <!-- 				<a href="https://2217937757.github.io/XIAO/123123/选人/" target="_blank">选 人</a> -->
+                            <a href="https://2217937757.github.io/XIAO/123123/桃饱/" target="_blank">桃饱网</a>
+                            <a href="https://2217937757.github.io/XIAO/123123/支付/" target="_blank">打 钱</a>
+                            <a href="https://2217937757.github.io/XIAO/123123/剪刀石头布/" target="_blank">剪刀石头布</a>
+                            <a href="https://2217937757.github.io/XIAO/123123/无限弹窗/" target="_blank">无限弹窗</a>
+                    </td>
+                </tr>
+            </table>
         </div>
         <div id="box">
-            <p style="text-align: center; font-size: 30px;">
-                原地传送
-            </p>
-            <p style="height: 20px;"></p>
-            <p>
-                <a href="https://2217937757.github.io/XIAO/" target="_blank">原地tp</a>
-            </p>
+            <table>
+                <tr>
+                    <td>
+                        <p style="text-align: center; font-size: 30px;">
+                            原地传送
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>
+                            <a href="https://2217937757.github.io/XIAO/" target="_blank">原地tp</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
         </div>
         <!-- <div id="box">
             6
