--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             color: #fff;
         }
         body{
-            background: url(./img/dian.gif) no-repeat;
+/*             background: url(./img/dian.gif) no-repeat; */
+            background-color:black;
             background-size:100% 100%;
             background-attachment:fixed;
         }
