--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<div class="q5">
 			<p><a href="https://2217937757.github.io/XIAO/" target="_blank">原地tp</a></p>
 			<p><a href="https://2217937757.github.io/XIAO/123123/剪刀石头布/" target="_blank">剪刀石头布</a></p>
+			<p><a href="https://2217937757.github.io/XIAO/123123/简历/" target="_blank">简历</a></p>
 		</div>
 		
 		<hr/ size="3" color="#000000" align="center" width="800">
