--- a/123123/简历/index.html
+++ b/123123/简历/index.html
@@ -1,9 +1,10 @@
 <html>
     <body>
         <!-- <object data="简历.pdf" type="application/pdf" width="100%" height="100%"></object> -->
-        <object data="简历.pdf" type="application/pdf" width="100%" height="100%">
+        <!-- <object data="简历.pdf" type="application/pdf" width="100%" height="100%">
             该浏览器不支持PDF.请点击查看:
             <a href="简历.pdf">Download PDF</a>.</p>
-            </object>
+            </object> -->
+        <img src="jl.png" alt="">
     </body>
 </html>
